<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/A"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/yugiimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/yugi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/padding"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/background_light"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                android:text="@string/player1"/>


        </RelativeLayout>

        <TextView
            android:id="@+id/yugilp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/player1lp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/B"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/yugi1"
            android:onClick="attackKaiba1"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/yugi2"
            android:onClick="attackKaiba2"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/yugi3"
            android:onClick="attackKaiba3"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/Yugiatk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/card1"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/card2"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/card3"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/new_game"
        android:textAlignment="center"
        android:textStyle="bold"
        android:onClick="reset"/>

    <LinearLayout
        android:id="@+id/C"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/kaiba1"
            android:onClick="attackYugi1"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/kaiba2"
            android:onClick="attackYugi2"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/kaiba3"
            android:onClick="attackYugi3"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/kaibaatk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/card4"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/card5"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/card6"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/D"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/kaibalp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/player2lp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/kaibaimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/kaiba"
                android:scaleType="centerCrop"
                android:src="@drawable/kaiba" />

            <TextView
                android:id="@+id/kaiba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="@dimen/padding"
                android:text="@string/player2"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/background_light"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold" />


        </RelativeLayout>


    </LinearLayout>


</LinearLayout>